--- a/src/components/common/aq-allpage-layout.html
+++ b/src/components/common/aq-allpage-layout.html
@@ -57,6 +57,20 @@
         	--margin-bottom: 20px;
         }
 
+        ::content .header-button paper-button{
+            font-size: 12px;
+            font-weight: 700;
+            background-color: teal;
+            color: white;
+        }
+
+        ::content .footer-button paper-button {
+            font-size: 12px;
+            font-weight: 700;
+            background-color: teal;
+            color: white;
+        }
+
 	</style>
 
 	<template>
