--- a/src/layouts/aq-analyze-main.html
+++ b/src/layouts/aq-analyze-main.html
@@ -37,11 +37,12 @@
         DONE THIS TO PREVENT UNEXPECTED BEHAVIOR DOWNSTREAM WHERE CHILD WAS GETTING ATTACHED TWICE-->
         <iron-lazy-pages restamp attr-for-selected="page" selected="[[_computeAnalyzePage(detailActive)]]">
             <template is='iron-lazy-page' restamp page="home">
-                <aq-analyze-home strategy-id='[[homeData.strategyId]]'></aq-analyze-home>
+                <aq-analyze-home current-path=[[currentPath]] strategy-id='[[homeData.strategyId]]'></aq-analyze-home>
             </template>
 
             <template is='iron-lazy-page' restamp page="detail">
                 <aq-analyze-detail
+                    current-path=[[currentPath]]
                     type-id='[[detailData.id]]'
                     strategy-id='[[detailData.strategyId]]' 
                     params="[[queryParams]]">
@@ -57,10 +58,11 @@
             properties: {
                 detailActive: Boolean,
                 queryParams: Object,
+                currentPath:Array,      
             },
 
             _computeAnalyzePage: function(detailActive) {
-               return detailActive ? "detail" : "home";
+                return detailActive ? "detail" : "home";
             },
 
         });
