--- a/src/layouts/aq-help-main.html
+++ b/src/layouts/aq-help-main.html
@@ -12,7 +12,7 @@
     }
   </style>
   <template>
-      <aq-help-home></aq-help-home>
+      <aq-help-home current-path=[[currentPath]]></aq-help-home>
   </template>
 
   <script>
@@ -33,6 +33,8 @@
           type:Boolean,
           value:false,
         },
+
+        currentPath: Array,
 
       },
 
